email notification added

--- a/next-app/src/app/globals.css
+++ b/next-app/src/app/globals.css
@@ -204,4 +204,35 @@
     color: hsl(var(--primary-foreground)) !important;
     box-shadow: inset 0 1px 0 0 hsl(var(--primary-foreground) / 0.1), 0 1px 3px 0 hsl(var(--primary) / 0.3) !important;
   }
+  
+  /* Fix datetime-local input calendar icon visibility in dark mode */
+  input[type="datetime-local"]::-webkit-calendar-picker-indicator {
+    filter: invert(0.8);
+    cursor: pointer;
+  }
+  
+  .dark input[type="datetime-local"]::-webkit-calendar-picker-indicator {
+    filter: invert(1);
+    cursor: pointer;
+  }
+  
+  input[type="date"]::-webkit-calendar-picker-indicator {
+    filter: invert(0.8);
+    cursor: pointer;
+  }
+  
+  .dark input[type="date"]::-webkit-calendar-picker-indicator {
+    filter: invert(1);
+    cursor: pointer;
+  }
+  
+  input[type="time"]::-webkit-calendar-picker-indicator {
+    filter: invert(0.8);
+    cursor: pointer;
+  }
+  
+  .dark input[type="time"]::-webkit-calendar-picker-indicator {
+    filter: invert(1);
+    cursor: pointer;
+  }
 }
